--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "admin-lte": "^2.4.2",
-    "bootstrap-table": "^1.11.1"
+    "bootstrap-table": "^1.11.1",
+    "jquery-form": "^4.2.2"
   }
 }
