--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "admin-lte": "^2.4.2",
     "bootstrap-table": "^1.11.1",
-    "jquery-form": "^4.2.2"
+    "jquery-form": "^4.2.2",
+    "layer": "^3.1.1"
   }
 }
