--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "admin-lte": "^2.4.2",
     "bootstrap-table": "^1.11.1",
     "jquery-form": "^4.2.2",
-    "layer": "^3.1.1"
+    "layer": "^3.1.1",
+    "jquery-validation": "^1.17.0"
   }
 }
