--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "bootstrap-table": "^1.11.1",
     "jquery-form": "^4.2.2",
     "layer": "^3.1.1",
-    "jquery-validation": "^1.17.0"
+    "jquery-validation": "^1.17.0",
+    "sly": "^1.6.1"
   }
 }
