--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "jquery-form": "^4.2.2",
     "layer": "^3.1.1",
     "jquery-validation": "^1.17.0",
-    "sly": "^1.6.1"
+    "sly": "^1.6.1",
+    "vue": "^2.5.13",
+    "iCheck": "icheck#^1.0.2"
   }
 }
