--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "trntv/yii2-file-kit": "^1.0.0",
         "trntv/yii2-glide": "^1.2",
         "vlucas/phpdotenv": "^2.0"
     },
