--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,7 @@ APP_MAINTENANCE = 0
 # Application
 # -----------
 LINK_ASSETS=true
+BACKEND_COOKIE_VALIDATION_KEY = r3PICL-TNW_hGs7Qky2Fl7t81kyst_NN
 
 # Databases
 # ---------
@@ -24,12 +25,16 @@ STORAGE_HOST_INFO     = http://storage.yii2admin.test
 
 # Single domain example
 # ----
-#FRONTEND_HOST_INFO    = http://yii2-starter-kit.test
+#FRONTEND_HOST_INFO    = http://yii2admin.test
 #FRONTEND_BASE_URL     = /
-#BACKEND_HOST_INFO     = http://yii2-starter-kit.test
+#BACKEND_HOST_INFO     = http://yii2admin.test
 #BACKEND_BASE_URL      = /backend/web
-#STORAGE_HOST_INFO     = http://yii2-starter-kit.test
+#STORAGE_HOST_INFO     = http://yii2admin.test
 #STORAGE_BASE_URL     = /storage/web
 
 
+# Other
+# -----
 
+GLIDE_SIGN_KEY = kUCxQ-ms-JhzkBD44xEzrILbGbIqZ-U3
+GLIDE_MAX_IMAGE_SIZE = 4000000
