--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "sly": "^1.6.1",
     "vue": "^2.5.13",
     "iCheck": "icheck#^1.0.2",
-    "blueimp-file-upload": "^9.21.0"
+    "blueimp-file-upload": "^9.21.0",
+    "select2": "4.0.2"
   }
 }
