--- a/.env.dist
+++ b/.env.dist
@@ -8,6 +8,8 @@ APP_MAINTENANCE = 0
 # -----------
 LINK_ASSETS=true
 BACKEND_COOKIE_VALIDATION_KEY = r3PICL-TNW_hGs7Qky2Fl7t81kyst_NN
+# 布局类型， 1tab,2页面
+LAYOUT_TYPE = 1
 
 # Databases
 # ---------
