主题配置化

--- a/.env.dist
+++ b/.env.dist
@@ -11,6 +11,13 @@ BACKEND_COOKIE_VALIDATION_KEY = r3PICL-TNW_hGs7Qky2Fl7t81kyst_NN
 # 布局类型， 1tab,2页面
 LAYOUT_TYPE = 1
 
+# 主题，可选值  [skin-blue-light,skin-yellow,skin-yellow-light,skin-green,skin-green-light,skin-purple,skin-purple-light,skin-red,skin-red-light,skin-black,skin-black-ligh]
+ADMINLTE_SKIN = skin-blue
+
+
+
+
+
 # Databases
 # ---------
 DB_DSN           = mysql:host=db;port=3306;dbname=yii2admin
