站点名调整

--- a/.env.dist
+++ b/.env.dist
@@ -2,11 +2,15 @@
 # ---------
 YII_DEBUG       = true
 YII_ENV         = dev
-APP_MAINTENANCE = 0
+LINK_ASSETS=true
+
+
 
 # Application
 # -----------
-LINK_ASSETS=true
+# 站点名称
+SITE_NAME = yii-admin
+
 BACKEND_COOKIE_VALIDATION_KEY = r3PICL-TNW_hGs7Qky2Fl7t81kyst_NN
 # 布局类型， 1tab,2页面
 LAYOUT_TYPE = 1
@@ -16,30 +20,28 @@ ADMINLTE_SKIN = skin-blue
 
 
 
-
-
 # Databases
 # ---------
-DB_DSN           = mysql:host=db;port=3306;dbname=yii2admin
-DB_USERNAME      = ysk_dbu
-DB_PASSWORD      = ysk_pass
-DB_TABLE_PREFIX  =
-DB_CHARSET       = utf8mb4
+DB_DSN          = mysql:host=db;port=3306;dbname=yii2admin
+DB_USERNAME     = ysk_dbu
+DB_PASSWORD     = ysk_pass
+DB_TABLE_PREFIX = 
+DB_CHARSET      = utf8mb4
 
 # Urls
 # ----
-FRONTEND_HOST_INFO    = http://yii2admin.test
-BACKEND_HOST_INFO     = http://backend.yii2admin.test
-STORAGE_HOST_INFO     = http://storage.yii2admin.test
+FRONTEND_HOST_INFO = http://yii2admin.test
+BACKEND_HOST_INFO  = http://backend.yii2admin.test
+STORAGE_HOST_INFO  = http://storage.yii2admin.test
 
 # Single domain example
 # ----
-#FRONTEND_HOST_INFO    = http://yii2admin.test
-#FRONTEND_BASE_URL     = /
-#BACKEND_HOST_INFO     = http://yii2admin.test
-#BACKEND_BASE_URL      = /backend/web
-#STORAGE_HOST_INFO     = http://yii2admin.test
-#STORAGE_BASE_URL     = /storage/web
+#FRONTEND_HOST_INFO = http://yii2admin.test
+#FRONTEND_BASE_URL  = /
+#BACKEND_HOST_INFO  = http://yii2admin.test
+#BACKEND_BASE_URL   = /backend/web
+#STORAGE_HOST_INFO  = http://yii2admin.test
+#STORAGE_BASE_URL   = /storage/web
 
 
 # Other
