--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "vue": "^2.5.13",
     "iCheck": "icheck#^1.0.2",
     "blueimp-file-upload": "^9.21.0",
-    "select2": "4.0.2"
+    "select2": "4.0.2",
+    "gasparesganga-jquery-loading-overlay":"^2.1.6"
   }
 }
